--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+game_time = "0.2.0"
 legion = "0.4.0"
 noise = "0.7.0"
 rand = "0.8.4"
